--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
     "@data-driven-forms/pf4-component-mapper": "^3.19.0",
     "@data-driven-forms/react-form-renderer": "^3.19.0",
     "@openshift/dynamic-plugin-sdk": "^4.0.0",
-    "@patternfly/react-core": "^4.264.0",
-    "@patternfly/react-icons": "^4.93.0",
-    "@patternfly/react-table": "^4.111.45",
+    "@patternfly/react-core": "^5.3.0",
+    "@patternfly/react-icons": "^5.3.0",
+    "@patternfly/react-table": "^5.1.1",
     "@patternfly/react-component-groups": "^5.2.0-prerelease.4",
-    "@redhat-cloud-services/frontend-components": "^3.9.25",
-    "@redhat-cloud-services/frontend-components-notifications": "^3.2.12",
-    "@redhat-cloud-services/frontend-components-utilities": "^3.3.8",
-    "@scalprum/react-core": "^0.5.4",
+    "@redhat-cloud-services/frontend-components": "^4.2.2",
+    "@redhat-cloud-services/frontend-components-notifications": "^4.1.0",
+    "@redhat-cloud-services/frontend-components-utilities": "^4.0.2",
+    "@scalprum/react-core": "^0.7.0",
     "classnames": "^2.3.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.9",
-    "react-router-dom": "^6.19.0",
-    "redux": "^4.0.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.21.1",
+    "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
-    "redux-promise-middleware": "^6.1.2"
+    "redux-promise-middleware": "^6.2.0"
   },
   "jest": {
     "setupFilesAfterEnv": [
@@ -59,21 +59,23 @@
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-flow": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
-    "@redhat-cloud-services/eslint-config-redhat-cloud-services": "^1.1.0",
+    "@redhat-cloud-services/eslint-config-redhat-cloud-services": "^1.3.0",
     "@redhat-cloud-services/frontend-components-config": "^4.7.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^12.1.5",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.1.2",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "@types/jest": "^29.5.11",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
     "axios-mock-adapter": "^1.19.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-lodash": "^3.3.4",
     "cross-fetch": "^3.1.0",
     "css-loader": "^5.1.3",
-    "eslint": "^7.22.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.33.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
