--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
+    "types": ["node", "jest", "@testing-library/jest-dom"],
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
   "include": [
     "src/**/*.ts",
