--- a/.tekton/user-preferences-frontend-pull-request.yaml
+++ b/.tekton/user-preferences-frontend-pull-request.yaml
@@ -411,7 +411,7 @@ spec:
       - name: image-url
         value: $(tasks.build-container.results.IMAGE_URL)
       runAfter:
-      - clone-repository
+      - build-container
       taskRef:
         params:
         - name: name
